--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +13,6 @@
     "@google-cloud/bigquery": "^6.2.0",
     "@hapi/hapi": "^21.3.2",
     "mysql": "^2.18.1",
-    "nanoid": "^3.3.6",
-    "nodemon": "^2.0.22"
+    "nanoid": "^3.3.6"
   }
 }
