--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@google-cloud/bigquery": "^6.2.0",
     "@hapi/hapi": "^21.3.2",
+    "hapi": "^18.1.0",
+    "joi": "^17.9.2",
     "mysql": "^2.18.1",
     "nanoid": "^3.3.6"
   }
